# Project-JARVIS

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Makefile  README.md  SCCL-v1.md  SECURITY.md  docker-build.bat  docker-build.sh  docker-compose.yml  docker-run.bat  docker-run.sh  presentation.md  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  install-test.yml  notify-parent.yml  publish.yml
docs/: HERMES-COMPARISON.md  PORTABILITY-SPEC.md  SECURITY-ARCHITECTURE.md  architecture.md  clean-and-professional-plan-04-19-26.md  dispatch-timer-spec.md  engineering-standards.md  jarvis-workflow-investigation.md  memory-management.md  multicommand-system.md  research.md  server-config-params-spec.md  tla-confirmation-design.md  tool-discovery-redesign.md  tui-overview.md
examples/: logging_demo.py  vosk_demo.py
jarvis/: .env.example  __init__.py  cli.py  config.env.template  config.py  kernel_client.py  llm.py  llm_providers.py  main.py  supermcp_client.py  voice_activation.py  voice_input.py  voice_output.py
jarvis/clients/: __init__.py  cli_client.py
jarvis/contextor/: __init__.py  adapter.py  embeddings.py  vector_store.py
jarvis/core/: __init__.py  audio_detection.py  command_parser.py  component_factory.py  confirmation_manager.py  input_guard.py  logger.py  output_manager.py  params_store.py  providers.py  socket_security.py  sudo_manager.py  system_info.py  threat_level.py  voice_manager.py  voice_state.py
jarvis/daemon/: __init__.py  __main__.py  core.py  gateway.py  protocol.py
jarvis/dispatch/: __init__.py  adapter.py  boundary.py  discovery.py  dmcp_registry.py  event_merger.py  goal_manager.py  tool_discovery.py  transport.py
jarvis/llm/: __init__.py  base.py  chat.py  context_manager.py  images.py  ollama_utils.py  provider_pool.py
jarvis/platform/: __init__.py  base.py  linux.py  macos.py  windows.py
jarvis/runtime/: __init__.py  dispatch_flow.py  events.py  goal_updates.py  io.py  lifecycle.py  llm_bridge.py  output_hooks.py  root_actions.py  root_context.py  root_handlers.py  session_commands.py  sync_ask.py  voice_activation_thread.py
jarvis/server/: __init__.py  openai_compat.py
jarvis/services/: __init__.py  __main__.py  voice_service.py
jarvis/sessions/: __init__.py  manager.py  model.py
jarvis/tui/: __init__.py  actions.py  app.py  config_modal.py  confirm_modal.py  help_screen.py  lifecycle.py  local_input.py  output.py  provider_modal.py  server_config_modal.py  session_sidebar.py  settings_editor_modal.py  settings_modal.py  slash_commands_doc.py  status_bar.py
jarvis/ui/: config_prompt.py
jarvis/voice/: __init__.py  activation.py  audio.py  base.py  chime.py  manager.py  stt.py  tts.py
legal/: SCCL-v1.md  adversarial-scenarios.md  c-points.md  cla.md  organization-charter.md
packaging/: Makefile  README.md  install-services.sh  install.sh  jarvis-daemon  jarvis.service  uninstall-services.sh
shellmcp/: manifest.json
tests/: conftest.py  integration_utils.py  test_boundary.py  test_cli_confirmations.py  test_concurrent_goals_barge_in.py  test_concurrent_llm_turns.py  test_config_direct.py  test_confirmation_goal_link.py  test_confirmation_pending.py  test_confirmation_socket.py  test_confirmation_tla.py  test_daemon_shutdown.py  test_dispatch_batch_turn.py  test_dispatch_push_signals.py  test_dispatch_root_direct_link.py  test_echo_cancellation.py  test_embeddings_capability.py  test_goal_manager_archive.py  test_gui_session_socket.py  test_gui_settings_socket.py  test_health_checks.py  test_integration_approval.py  test_integration_command_parser.py  test_integration_components.py  test_integration_config.py  test_integration_e2e.py  test_integration_error_handling.py  test_integration_llm.py  test_integration_supermcp.py  test_noise_gate.py  test_openai_compat_server.py  test_platform_xplat.py  test_providers.py  test_status_action.py  test_streaming.py  test_sudo_manager.py  test_threat_level.py  test_vision.py  test_voice_activation.py  test_voice_activation_timeout.py  (+2 more)
(+18 files in other folders)
