[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-jarvis"
version = "1.1.0"
description = "AI-Native Voice Assistant with Concurrent Task Dispatch"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    {name = "YakupAtahanov", email = "yakup.atahanow.b@gmail.com"},
]
maintainers = [
    {name = "YakupAtahanov", email = "yakup.atahanow.b@gmail.com"},
]
keywords = ["ai", "voice", "assistant", "mcp", "dispatch", "llm", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    # Core dependencies - required for basic functionality
    "ollama>=0.5.3",
    "python-dotenv>=1.1.1",
    "mcp[cli]>=1.13.1",
    "httpx>=0.28.1",
    "pathspec>=0.12.1",
]

[project.optional-dependencies]
# Voice input dependencies (Speech-to-Text)
voice-input = [
    "vosk>=0.3.45",
    "sounddevice>=0.5.2",
    "numpy>=2.2.0",
]

# Voice output dependencies (Text-to-Speech)
voice-output = [
    "piper-tts>=1.3.0",
    "sounddevice>=0.5.2",
    "onnxruntime>=1.22.0",
    "numpy>=2.2.0",
]

# Complete voice support (includes both input and output)
voice = [
    "vosk>=0.3.45",
    "piper-tts>=1.3.0",
    "sounddevice>=0.5.2",
    "onnxruntime>=1.22.0",
    "numpy>=2.2.0",
]

# Interactive terminal UI (OpenClaw-style chat with session sidebar).
# Launch with `jarvis tui`.
tui = [
    "textual>=0.60.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

# Documentation dependencies
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

# Everything - convenience group
all = [
    "project-jarvis[tui]",
    "project-jarvis[voice]",
    "project-jarvis[dev]",
    "project-jarvis[docs]",
]

[project.urls]
Homepage = "https://github.com/JarvisOSLinux/Project-JARVIS"
Repository = "https://github.com/JarvisOSLinux/Project-JARVIS"
Documentation = "https://github.com/JarvisOSLinux/Project-JARVIS#readme"
"Bug Tracker" = "https://github.com/JarvisOSLinux/Project-JARVIS/issues"

[project.scripts]
jarvis = "jarvis.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis*"]

[tool.setuptools.package-data]
jarvis = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["jarvis"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
